WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
67316
REGRESSION(92210): AVFoundation media engine is disabled on OS X
https://bugs.webkit.org/show_bug.cgi?id=67316
Summary
REGRESSION(92210): AVFoundation media engine is disabled on OS X
Jeff Miller
Reported
2011-08-31 14:05:08 PDT
When I moved the definition of WTF_USE_AVFOUNDATION on the Mac from JavaScriptCore/wtf/Platform.h to WebCore/config.h to fix
bug 65552
, this caused AVFoundation to be disabled on OS X, since WebKit2 doesn't have access to WebCore/config.h on the Mac (it does on Windows).
Attachments
Patch
(2.92 KB, patch)
2011-08-31 16:36 PDT
,
Jeff Miller
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jeff Miller
Comment 1
2011-08-31 14:05:27 PDT
<
rdar://problem/10047199
>
Jeff Miller
Comment 2
2011-08-31 14:20:06 PDT
Sam says that we shouldn't have moved the definition of WTF_USE_AVFOUNDATION out of JavaScriptCore/wtf/Platform.h in the first place. I'll use this bug to track fixing this for the Mac, and file a separate bug for Windows, since that's more involved.
Jeff Miller
Comment 3
2011-08-31 16:22:21 PDT
Fixing this on Windows is tracked by
bug 67334
.
Jeff Miller
Comment 4
2011-08-31 16:36:17 PDT
Created
attachment 105857
[details]
Patch
Jeff Miller
Comment 5
2011-08-31 16:53:57 PDT
Committed
r94251
: <
http://trac.webkit.org/changeset/94251
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug