Source/JavaScriptCore: REGRESSION(92210): AVFoundation media engine is disabled on OS X https://bugs.webkit.org/show_bug.cgi?id=67316

Move the definition of WTF_USE_AVFOUNDATION on the Mac back to JavaScriptCore/wtf/Platform.h,
since WebKit2 doesn't have access to WebCore/config.h on this platform. This reverts the
changes that were made in r92210.

Reviewed by Darin Adler.

* wtf/Platform.h: Added definition of WTF_USE_AVFOUNDATION on the Mac.

Source/WebCore: REGRESSION(92210): AVFoundation media engine is disabled on OS X
https://bugs.webkit.org/show_bug.cgi?id=67316

Move the definition of WTF_USE_AVFOUNDATION on the Mac back to JavaScriptCore/wtf/Platform.h,
since WebKit2 doesn't have access to WebCore/config.h on this platform. This reverts the
changes that were made in r92210.

Reviewed by Darin Adler.

No new tests, covered by existing media tests.

* config.h: Removed definition of WTF_USE_AVFOUNDATION on the Mac, add a comment about fixing this on Windows in the future.


Canonical link: https://commits.webkit.org/83163@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@94251 268f45cc-cd09-0410-ab3c-d52691b4dbfc